# ChangeLog for sys-kernel/git-sources
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.1340 2013/05/14 09:58:35 ago Exp $

*git-sources-3.10_rc1 (14 May 2013)

  14 May 2013; Agostino Sarubbo <ago@gentoo.org> +git-sources-3.10_rc1.ebuild,
  -git-sources-3.9_rc1.ebuild, -git-sources-3.9_rc2.ebuild,
  -git-sources-3.9_rc3.ebuild, -git-sources-3.9_rc4.ebuild,
  -git-sources-3.9_rc5.ebuild, -git-sources-3.9_rc6.ebuild,
  -git-sources-3.9_rc7.ebuild, -git-sources-3.9_rc8.ebuild:
  Version bump to 3.10, remove old

*git-sources-3.9_rc8 (22 Apr 2013)

  22 Apr 2013; Michael Pagano <mpagano@gentoo.org> +git-sources-3.9_rc8.ebuild:
  Version bump

*git-sources-3.9_rc7 (15 Apr 2013)

  15 Apr 2013; Agostino Sarubbo <ago@gentoo.org> +git-sources-3.9_rc7.ebuild:
  Version bump to 3.9_rc7

*git-sources-3.9_rc6 (08 Apr 2013)

  08 Apr 2013; Michael Pagano <mpagano@gentoo.org> +git-sources-3.9_rc6.ebuild:
  Version bump

*git-sources-3.9_rc5 (01 Apr 2013)

  01 Apr 2013; Agostino Sarubbo <ago@gentoo.org> +git-sources-3.9_rc5.ebuild:
  Version bump to 3.9_rc5

*git-sources-3.9_rc4 (24 Mar 2013)

  24 Mar 2013; Michael Pagano <mpagano@gentoo.org> +git-sources-3.9_rc4.ebuild:
  Version bump

*git-sources-3.9_rc3 (17 Mar 2013)

  17 Mar 2013; Michael Pagano <mpagano@gentoo.org> +git-sources-3.9_rc3.ebuild:
  Version bump

*git-sources-3.9_rc2 (11 Mar 2013)

  11 Mar 2013; Michael Pagano <mpagano@gentoo.org> +git-sources-3.9_rc2.ebuild:
  Version bump

  09 Mar 2013; Tom Wijsman <TomWij@gentoo.org> git-sources-3.9_rc1.ebuild:
  EAPI 5. Kernel sources and (gen)patches now use xz instead of bz2. Bug
  #421721.

*git-sources-3.9_rc1 (04 Mar 2013)

  04 Mar 2013; Michael Pagano <mpagano@gentoo.org> -git-sources-3.8_rc7.ebuild,
  +git-sources-3.9_rc1.ebuild:
  Add new 3.9 version. Remove 3.8

  23 Feb 2013; Agostino Sarubbo <ago@gentoo.org> -git-sources-3.8_rc1.ebuild,