@@ -1,25 +1,17 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST linux-3.9.tar.xz 72104164 SHA256 60bc3e64ee5dc778de2cd7cd7640abf518a4c9d4f31b8ed624e16fad53f54541 SHA512 77fa521f42380409f8ab400c26f7b00e225cb075ef40834bb263325cfdcc3e65aef8511ec2fc2b50bbf4f50e226fb5ab07d7a479aaf09162adbbf318325d0790 WHIRLPOOL 668a8de30c7c3ccf6558cf0f29570f15e37ca7d599d1453afc3cab113d1b05fbd5b32646dd9ed798ceb61405a8754345da0740a53f467b825445028cda4bc698
 DIST patch-3.10-rc1.xz 6754208 SHA256 961afc7fd58476eb3b095c5322bda74924587629b48ad61b0ba3cbffd15c914d SHA512 1a1fa747bcb3fe231393f2d621e19be3607a364baac61a195af2f3b6f49b670ccaa8b1060d0e5c93ea1366ae719eb7b53ef6ad6a4af84430f06e6c818ab57f7a WHIRLPOOL bd2dedcdf867e2c13fc25927ed0e65a96030316e9945f557dd3536db9a97ecffc7651e557795227bb1d192389303130d2e70bb776269c8cce86e85c50912375a
+DIST patch-3.10-rc2.xz 6808168 SHA256 4775983a197fb3af18b1e40a16c37cbfc78e345366a71fc0784faf022b1e574c SHA512 340e813b43668816daca5feadf08489934db5949c9aa4d4ebcb537c094619135b9b927ff47de0b1153904596e604fdfa0fd88f3ca6b7af0941b8bfb0185b2f87 WHIRLPOOL 55c5cbd5f036ca32074093a91e7ae9afb47e89568ea82e357323d6c7fb969a58dd90c43c3917cd54490d5fd7c797717b0b3bd405b6fb997b95b63e1222c93f66
 EBUILD git-sources-3.10_rc1.ebuild 1190 SHA256 5cb618e21fe0cc2288474d1261b44b07647d69b9ba256636f5be05118d89bede SHA512 02f5f810d3f2661d1ff74bce3e85aa73df766a4619ba1179221e291872ccbd9f443d20ec9f57cab49061cf8c5ef24f3197ca14c076bb2fa774a7ce74a3ef7a4c WHIRLPOOL d3ccc98f600366a414df465874e245e2969c823011d06e75019feff8e3e42360bf61ebc168a779f90d55ec15dbbe78619ef0e43808251dcbe0d49cfe3997f03a
-MISC ChangeLog 32799 SHA256 78e62b76429fe14f15349e07451277af8fffb4200036da70dd2e0c518fec93ff SHA512 42d529ccafc10073760c94997fc19fd480737aa92f4c445033c9f68301a1d657cc1aceae597b967226497f19bc52ce66e4f542555df03334466f0b159b9f3c55 WHIRLPOOL f33dd57d9ce7f55757fd581cc66717deb61a3a7a9213923076d76f1ad776f6d8e9b693de688d066c78bb3dea959ea73bf1730b398600eaea2fb70cae04b19cfc
+EBUILD git-sources-3.10_rc2.ebuild 1194 SHA256 bc9da8ba236811af9539d8cbe9ba56623a4cee23a0e965dc27a0ba31aba33787 SHA512 cb79cefc4757d46a1055d2f436753556a52a1741c9f631d5a6a20e64b4d0658cacfa590f00b66fa8949ada3ba60ac717cb01e6568593e75cdb72849066fdc681 WHIRLPOOL cb09857d1a5aca3a87d4e7bb31645a6226b899a72db88c23acad0e397d702f0cc61a8c791d6c96b574dd7687a0cc080987696d6d487378cfd7872ff7973d3a0d
+MISC ChangeLog 32939 SHA256 64737bb9b6212c73144cde2f045b63992baab9a3de0273e44351ac3b105a8c1a SHA512 9778fabde5c2eb78afa368614ac13527d65ca16ea8e35ab749e439ff0ef5d70e50ef62aa3a4ea2abd4ba1090a14b1743b656a9d3cdbc2b017c03a343fdc519c2 WHIRLPOOL aecb11bfe945d56e741e41463700ba69e24f83d8a155c52b3eae4ded73ed3e39894af640a28fb35b678e79d5eb3e2a0e4b5423b52c995eaa5c97e65e8e550f00
 MISC metadata.xml 460 SHA256 1cb771bf1cf049ed4ecb8b27e0efd74c765fb016a024403abbfa8a956b842b92 SHA512 eb8dd4acb0f2c40c87bec1f9bc90cad3d411e7d097f4d2b6e5022e1bf6299f92ed416a5df960f462f1081cef9c4ab9fc8c3029f009a5281d4d648c7f37a68121 WHIRLPOOL bbe0fe59b41c934b5d3aa373c8c222823b218fb553348b91603c2d9281a903c533234e956fa68da5af969d9f17c186a9e0318af95ab8c6f25c312720de8cfb87
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCgAGBQJRkgrFAAoJELp701BxlEWfF3oP/2CPziDqtPs4kDYPi333Hcrh
-VIUntsE/6m8VZpBaF6A7d/yjRv5jW91tQ7MjoCZ6PNkTBGoIZGKc3vuhBTYkwMDz
-0zKIdWYxDSXewwH+ItFubF2soHPaXg8ghCNtg89YxdbOFw5u5+2+/DpuIGNTpEbp
-IU5Y6rpRFLiaAvlXuAescqwFqhHKCZLJl33qF8U9SOb/Z5s1LA0EDmJcN/L4jsm9
-vj9zuVUDEGO5YdVl9Kr6vLo2mE5bXGeC42wYxHmIn9rNZ8A9MTUA37gcLxXnJTj2
-7Lpr42IV8IzqpKwKjzH9uOv9EEiPkXvt9hqGjdOE6vFifzy3dQ3tBIsrNjra+DMf
-3/dETNLS8Het9QCeP73apZjRYuMiTU9jQb4cRTdkRPXeCsvoE+Xs6VyeCHalc1ug
-iScU0Fq5+MnqmTu3uS7FgI9ZlGWLg/ggmkfMUl1yXm65EIkdYdIS9nGEAdtX1/fS
-fhk48aapM13gWOd2tlvotClZxcbrdJ7vokrQ4wfzqaTj759tIeXeCO/N/lQT2Bcw
-ETxWgeJ+kpsi4WWwUZnS7DvXZPgAf6iq9gdOqZ0hiIMqJxt7n4EIWk7HfoUMv2Tt
-AeSRHIYFB+3tXmaDsMWnS71/8JfttFKZBHQGuMDVBrS5fEGFaOYL1TM0S1mj+0u+
-O093FPnRyLvjKwXDhadQ
-=9IbX
+iEYEAREIAAYFAlGasg8ACgkQPDPGULV25OOAlACeJofZsnacpLuiwsiLj38RAYIO
+n5MAn0jmyRBd2wS8qSTPybQav/ka9Zwl
+=zmh/
 -----END PGP SIGNATURE-----
