@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.1340 2013/05/14 09:58:35 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.1341 2013/05/20 23:30:16 mpagano Exp $
+
+*git-sources-3.10_rc2 (20 May 2013)
+
+  20 May 2013; Michael Pagano <mpagano@gentoo.org>
+  +git-sources-3.10_rc2.ebuild:
+  Version bump
 
 *git-sources-3.10_rc1 (14 May 2013)
 
